<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@android:color/white">
    
    <EditText 
        android:id="@+id/eidt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="30dp"
        android:hint="@string/edit_add"
        />
    
    <EditText 
        android:id="@+id/edit_url"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/edit_add_monitor"
        />
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        >
        <Button 
            android:id="@+id/cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_alignParentLeft="true"
            android:text="@string/cancel"
            />
        <Button 
            android:id="@+id/confirm"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_alignParentRight="true"
            android:text="@string/confirm"
            />
    </RelativeLayout>
    

</LinearLayout>
